// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem should render correctly 1`] = `
<div>
  <li
    class="rmd-list-item rmd-list-item--clickable rmd-menu-item"
    role="menuitem"
    tabindex="-1"
  >
    <span
      class="rmd-list-item__text"
    >
      Item 1
    </span>
    <span
      class="rmd-ripple-container"
    />
  </li>
</div>
`;

exports[`MenuItem should render correctly 2`] = `
<div>
  <li
    class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-menu-item"
    id="menu-item-1"
    role="menuitem"
    tabindex="-1"
  >
    <i
      class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
    >
      icon
    </i>
    <span
      class="rmd-list-item__text"
    >
      Item 1
    </span>
    <span
      class="rmd-ripple-container"
    />
  </li>
</div>
`;
